--- a/guestbook.html
+++ b/guestbook.html
@@ -36,7 +36,7 @@ permalink: /guestbook/
     <b>或许你不经意留下的足迹，让我们成为了朋友</b>
 </div>
 <h3>1. 你可以手机扫码找到我:</h3>
-<img src="/assets/imgs/messages.png" alt="QR Code"/>
+<img src="{{ '/assets/imgs/messages.png' | prepend: site.baseurl }}" alt="QR Code"/>
 
 <h3>2. 你也可以通过下面的方式找到我：</h3>
 <pre>
@@ -47,7 +47,7 @@ permalink: /guestbook/
 
 <h3>3. 当然了，茫茫人海，你也可以直接找到我：</h3>
 <p>如果你可以的话。</p>
-<img src="/assets/imgs/yarerusa.jpg" alt="yarerusa"/>
+<img src="{{ '/assets/imgs/yarerusa.jpg' | prepend: site.baseurl }}" alt="yarerusa"/>
 
 <p>regards.</p>
 <h4 align="right" href="https:www.oukohou.wang">
