--- a/404.html
+++ b/404.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<meta name="keywords" content="个人主页, oukohou, 网址导航"/>
-<meta name="description" content="oukohou，个人主页"/>
+<meta name="keywords" content="个人主页, 二十二夜的雪, 网址导航"/>
+<meta name="description" content="二十二夜的雪，个人主页"/>
 <meta name="author" content="Huoty"/>
-<title>oukohou's blog</title>
+<title>二十二夜的雪的 blog</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 <body>
-    <script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://blog.konghy.cn/" homePageName="回到首页"></script>
+    <script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://snownight22.github.io/TTworksBlog/" homePageName="回到首页"></script>
 </body>
 </html>
