--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ permalink: /about/
 
     <a style="color:blue; text-indent:2em">update 2020-02-23：</a>
 
-    <p>我是tt，一名软件开发工程师。
+    <p>我是tt，一名软件开发工程师，爱好踢球。
 
 
     <p>我的社交账号有：</p>
