finish modify except donate

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ layout: base
 {% endfor %}
 
 <!--初始化Valine-->
+{% if site.valine.enable %}
 <script>
     var notify = '{{site.valine.notify}}' === true;
     var verify = '{{site.valine.verify}}.>' === true;
@@ -65,6 +66,7 @@ layout: base
         avatar: '{{site.valine.avatar}}',
     });
 </script>
+{% endif %}
 
 <div class="page-navigator">
     {% if paginator.previous_page %}
@@ -80,19 +82,3 @@ layout: base
     {% endif %}
 </div>
 
-<!--&lt;!&ndash;use clustrMaps&ndash;&gt;-->
-<!--<script type="text/javascript" id="clstr_globe"-->
-<!--        src="//cdn.clustrmaps.com/globe.js?d=AjthYW1xsC160mPRvz36bECA0Oi2v43aj1tyCOkL_Cc"-->
-<!--&gt;-->
-<!--        // crossorigin="anonymous"-->
-<!--</script>-->
-<!--<script type='text/javascript' id='clustrmaps'-->
-        <!--src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=3000&t=n&d=AjthYW1xsC160mPRvz36bECA0Oi2v43aj1tyCOkL_Cc'>-->
-
-<!--</script>-->
-<!--<a href='https://clustrmaps.com/site/1b6rd'  title='Visit tracker'>-->
-    <!--<img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=3000&t=n&d=AjthYW1xsC160mPRvz36bECA0Oi2v43aj1tyCOkL_Cc' width="100%"/>-->
-<!--</a>-->
-<!--<a href="https://clustrmaps.com/site/1b6rd" title="Visit tracker">-->
-<!--<img src="//www.clustrmaps.com/map_v2.png?d=AjthYW1xsC160mPRvz36bECA0Oi2v43aj1tyCOkL_Cc&cl=ffffff" width="100%"/>-->
-<!--</a>-->
