--- a/guestbook.html
+++ b/guestbook.html
@@ -52,7 +52,7 @@ permalink: /guestbook/
 <p>如果你可以的话。</p>
 <img src="{{ '/assets/imgs/yarerusa.jpg' | prepend: site.baseurl }}" alt="yarerusa"/>
 
-<p>regards.</p>
+<p align="right">regards.</p>
 <h4 align="right" href="https://snownight22.github.io/TTworksBlog/">
     <a href="https://snownight22.github.io/TTworksBlog/">
         二十二夜的雪.
