--- a/about.html
+++ b/about.html
@@ -34,11 +34,11 @@ permalink: /about/
         <tr>
             <td style="text-align: center"><a style="color:blue; text-indent:2em"><b>微信公众号</b></a></td>
             <td style="text-align: center"><a
-                    href="">
+                    href="https://mp.weixin.qq.com/s/zOmCbSw5DADT3-7l5yEt2Q">
                 <u><b>二十二夜的雪</b></u><a style="color:cadetblue"></a></a></td>
 
             <td style="text-align: center"><a style="color: slategrey"><b>可搜索：</b></a>
-                <a href=""
+                <a href="https://mp.weixin.qq.com/s/zOmCbSw5DADT3-7l5yEt2Q"
                    style="color: darkorange;"
                    target="_blank"><u><b>SnowNight22</b></u></a>
             </td>
@@ -73,7 +73,7 @@ permalink: /about/
     <!--</pre>-->
     <p style="text-indent:2em">
     <div style="color:blue; text-indent:2em" align="center">微信公众号：
-        <a href=""
+        <a href="https://mp.weixin.qq.com/s/zOmCbSw5DADT3-7l5yEt2Q"
            target="_blank">
             <u><b>二十二夜的雪</b></u><a style="color:cadetblue"></a></a>
         <a>(SnowNight22)</a>
