--- a/guestbook.html
+++ b/guestbook.html
@@ -43,7 +43,7 @@ permalink: /guestbook/
     <div class="content">
     Email                   :   s_peach@163.com<br/>
     Blog site               :   https://snownight22.github.io/TTworksBlog/<br/>
-    Wechat official account :   SnowNight22<br/>
+    Wechat official account :   [SnowNight22](https://mp.weixin.qq.com/s/zOmCbSw5DADT3-7l5yEt2Q)<br/>
     Slogan                  :   博望而约取;厚积而薄发。<br/>
     </div>
 </pre>
