--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@ permalink: /about/
 
     <a style="color:blue; text-indent:2em">update 2020-02-23：</a>
 
-    <p>我是tt，一名软件开发工程师，爱好踢球。
+    <p>我是tt，一名软件开发工程师，爱好踢球。这里是我的个人主页，用于记录和分享自己工作和学习中的总结。</p>
 
 
-    <p>我的社交账号有：</p>
+    <p>你可以通过以下方式联系到我：</p>
 
     <table>
         <thead>
