--- a/about.html
+++ b/about.html
@@ -64,6 +64,14 @@ permalink: /about/
             <td style="text-align: center"><a style="color: slategrey">- -</a>
             </td>
         </tr>
+        
+        <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS订阅</a></li>
+        <tr>
+            <td style="text-align: center"><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS订阅</a></td>
+            <td style="text-align: center">- -</td>
+            <td style="text-align: center"><a style="color: slategrey">- -</a>
+            </td>
+        </tr>
 
         </tbody>
     </table>
