--- a/about.html
+++ b/about.html
@@ -6,6 +6,20 @@ permalink: /about/
 ---
 
 <!-- Chinese Version -->
+<style type="text/css">
+table {
+    margin: auto auto 15px;
+    width: 100%;
+    border: 0px;
+}
+table th {
+    border:0px;
+}
+table td {
+    border:0px;
+}
+</style>
+
 <div class="zh post-container">
 
 
@@ -15,10 +29,11 @@ permalink: /about/
 
     <a style="color:blue; text-indent:2em">update 2020-02-23：</a>
 
-    <p>我是tt，一名软件开发工程师，爱好踢球。这里是我的个人主页，用于记录和分享自己工作和学习中的总结。</p>
+    <p>我是tt，一名软件开发工程师，爱好踢球。这里是我的个人主页，用于记录和分享自己工作和学习中的总结以及日常遇到的问题的解决记录。</p>
 
 
     <p>你可以通过以下方式联系到我：</p>
+
 
     <table>
         <thead>
@@ -34,7 +49,7 @@ permalink: /about/
         <tr>
             <td style="text-align: center"><a style="color:blue; text-indent:2em"><b>微信公众号</b></a></td>
             <td style="text-align: center"><a
-                    href="https://mp.weixin.qq.com/s/zOmCbSw5DADT3-7l5yEt2Q">
+                    href="https://mp.weixin.qq.com/s/zOmCbSw5DADT3-7l5yEt2Q" target="_blank">
                 <u><b>二十二夜的雪</b></u><a style="color:cadetblue"></a></a></td>
 
             <td style="text-align: center"><a style="color: slategrey"><b>可搜索：</b></a>
@@ -65,7 +80,6 @@ permalink: /about/
             </td>
         </tr>
         
-        <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS订阅</a></li>
         <tr>
             <td style="text-align: center"><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS订阅</a></td>
             <td style="text-align: center">- -</td>
