add visitor count

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: base
 <!--valine comment function-->
 <script src="https://cdnjs.loli.net/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!--<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>-->
-<script src="cdn.jsdelivr.net/npm/leancloud-storage@3.11.1/dist/av-min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.11.1/dist/av-min.js"></script>
 <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
 
 
@@ -31,9 +31,9 @@ layout: base
                 <span id={{post.url}} class="leancloud-visitors" data-flag-title={{post.title}}>
                     <span class="post-meta-divider">|</span>
                     <span class="post-meta-item-text">阅读量 </span>
-                    <span class="leancloud-visitors-count"></span>
+                    <span class="leancloud-visitors-count">-</span>
                 </span>
-                &#x1F601
+                <!--&#x1F601-->
         </span>
 
     </div>
@@ -82,89 +82,11 @@ layout: base
 </div>
 
 {% if site.leanCloud.enable %}
-<!-- 文章阅读数 -->
-
+{% include readerStatistics %}
 <script>
-    // 第一个参数是appid，第二个参数是appkey，此处的只是示例
-    AV.initialize('{{site.leanCloud.appId}}', '{{site.leanCloud.appKey}}');
-    // 自己创建的Class的名字
-    var name='{{site.leanCloud.counter}}';
-    function createRecord(Counter){
-      // 设置 ACL
-      var acl = new AV.ACL();
-      acl.setPublicReadAccess(true);
-      acl.setPublicWriteAccess(true);
-      // 获得span的所有元素
-      var elements=document.getElementsByClassName('leancloud-visitors');
-      // 一次创建多条记录
-      var allcounter=[];
-      for (var i = 0; i < elements.length ; i++) {
-        // 若某span的内容不包括 '-' ，则不必创建记录
-        if(elements[i].textContent.indexOf('-') == -1){
-          continue;
-        }
-        var title = elements[i].getAttribute('data-flag-title');
-        var url = elements[i].id;
-        var newcounter = new Counter();
-        newcounter.setACL(acl);
-        newcounter.set("Title", title);
-        newcounter.set("Url", url);
-        newcounter.set("Time", 0);
-        allcounter.push(newcounter);
-        // 顺便更新显示span为默认值0
-        elements[i].textContent=0;
-      }
-      AV.Object.saveAll(allcounter).then(function (todo) {
-        // 成功保存记录之后
-        console.log('创建记录成功！');
-      }, function (error) {
-        // 异常错误 
-        console.error('创建记录失败: ' + error.message);
-      });
-    }
-    function showCount(Counter){
-      // 是否需要创建新纪录的标志（添加一篇新文章）
-      var flag=false;
-      var query = new AV.Query(name);
-      query.greaterThanOrEqualTo('time', 0);
-      query.find().then(function (results) {
-        // 当获取到的记录为0时置默认值
-        if(results.length==0){
-          $('.leancloud-visitors').text('-');
-          flag=true;
-          console.log('返回查询记录为空');
-          // 如果获取到空记录就创建新记录
-          createRecord(Counter);
-          return;
-        }
-        // 将获取到的数据设置为text
-        for (var i = 0; i < results.length; i++) {
-          var item = results[i];
-          var url = item.get('Url');
-          var time = item.get('Time');
-          var element = document.getElementById(url);
-          element.textContent = time;
-        }
-        // 当某个span含有默认值时说明需要创建记录
-        if($('.leancloud-visitors').text().indexOf("-") != -1){
-          flag=true;
-        }
-        // 当获取的记录数与span个数不吻合时
-        if(results.length != $('.leancloud-visitors').length){
-          flag=true;
-        }
-        if(flag){
-          createRecord(Counter);
-        }
-      }, function (error) {
-        console.log('query error:'+error.message);
-        document.write("query error:");
-      });
-    }
     $(function() {
       var Counter = AV.Object.extend(name);
-      document.write("Function exec\n");
-      showCount(Counter);
+      showAllCount(Counter);
     });
 </script>
 {% endif %}
