--- a/about.html
+++ b/about.html
@@ -120,27 +120,8 @@ table td {
 <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
 
 <p><br/><br/><br/><br/>
-<hr/><br/>不写个评论嘛：</p>
-<div id="valine_comment" class="fb_comments_container"></div>
-{% if site.valine.enable %}
-<script>
-    var notify = '{{site.valine.notify}}' === true;
-    var verify = '{{site.valine.verify}}.>' === true;
-    var visitor = '{{site.valine.visitor}}.>' === true;
-
-    new Valine({
-        av: AV,
-        el: '#valine_comment',
-        notify: notify,
-        verify: verify,
-        // smiles_url: '/smiles',
-        visitor: visitor,
-        app_id: '{{site.valine.app_id}}',
-        app_key: '{{site.valine.app_key}}',
-        placeholder: '{{site.valine.placeholder}}',
-        avatar: '{{site.valine.avatar}}'
-    });
-</script>
-{% endif %}
+<hr/>
+<!--
+<br/>不写个评论嘛：</p>
 {% include comment.html %}
-
+-->
